--- a/server/web/styles.css
+++ b/server/web/styles.css
@@ -1,15 +1,15 @@
 body {
-    width: 100%;
-    touch-action: none;
+    max-width: 100%;
 }
 
 canvas {
-    max-width: 90%;
+    max-width: 95%;
     margin: 0 auto;
+    display: block;
 }
 
 table {
-    margin: 0;
+    margin: 0 auto;
 }
 
 button {
