more stylistic improvements; most notably bg color

--- a/server/web/styles.css
+++ b/server/web/styles.css
@@ -6,6 +6,8 @@ canvas {
     max-width: 95%;
     margin: 0 auto;
     display: block;
+    border: black solid 3px;
+    box-sizing: content-box;
 }
 
 table {
